[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anthropic-cli"
version = "0.2.0"
description = "A command-line tool for interacting with the Anthropic API"
authors = [
    { name = "David Mohl", email = "git@d.sh" },
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["anthropic", "api", "cli", "command-line"]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/dvcrn/anthropic-cli"
"Bug Tracker" = "https://github.com/dvcrn/anthropic-cli/issues"

[project.scripts]
anthropic-cli = "cli.cli:main"

[tool.setuptools]
packages = ["cli"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.mypy]
strict = true

[tool.black]
line-length = 120
target-version = ['py37']